2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicButtonUI.java: API doc fixes,
	* javax/swing/plaf/basic/BasicRadioButtonUI.java: likewise,
	* javax/swing/plaf/basic/BasicTreeUI.java: likewise.

2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalCheckBoxIcon.java: API doc fixes,
	* javax/swing/plaf/metal/MetalIconFactory.java: likewise.
	
2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/html/HTMLEditorKit.java: API doc fixes.
	
2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/AbstractLayoutCache.java: API doc fixes,
	* javax/swing/tree/DefaultTreeCellRenderer.java: likewise,
	* javax/swing/tree/DefaultTreeModel.java: likewise,
	* javax/swing/tree/FixedHeightLayoutCache: likewise.
	
2005-07-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalToggleButtonUI.java
	(constructor): Initialize colors.
	(getFocusColor): Fetches the focus property from the UIDefaults.
	(getSelectColor): Fetches the select property from the UIDefaults.
	(getDisabledTextColor): Fetches the disabledText property from the
	UIDefaults.

2005-07-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicTableUI.java:
	(KeyHandler.updateSelection): Update the ListSelectionModels even if
	rowSelectionAllowed or columnSelectionAllowed is false.  This
	complies with the JDK.
	(KeyHandler.keyPressed): Implemented the ENTER key action.

2005-07-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/BorderUIResource.java: API doc fixes,
	* javax/swing/plaf/FileChooserUI.java: likewise,
	* javax/swing/plaf/TextUI.java: likewise,
	* javax/swing/plaf/UIResource.java: likewise.
	
2005-07-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/event/EventListenerList.java: API doc fixes,
	* javax/swing/event/MenuKeyEvent.java: likewise,