@@ -1,3 +1,13 @@
+2005-07-22  Roman Kennke  <roman@kennke.org>
+
+	* java/awt/Component.java
+	(show): Instead of invalidating the component, only invalidate
+	the parent, if there is one. Also, avoid NPEs by creating local
+	references.
+	(hide): Instead of invalidating the component, only invalidate
+	the parent, if there is one. Also, avoid NPEs by creating local
+	references.
+
 2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/plaf/basic/BasicButtonUI.java: API doc fixes,
